--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
     steps:
       - run: aws --version
       - run: echo ${CIRCLE_WORKFLOW_ID:0:5}
+
   create_infrastructure:
     docker:
       - image: cimg/aws:2023.08
@@ -35,6 +36,25 @@ jobs:
               --region us-east-1
       - destroy_environment
 
+  configure_infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - run: pwd
+      - run: ls
+      - add_ssh_keys:
+          fingerprints: ["4a:fb:52:e2:14:ef:58:01:88:a1:38:7e:fc:ea:aa:ef"]
+      - run:
+          name: Install dependencies
+          command: |
+            # install the dependencies needed for your playbook
+            apk add --update ansible 
+      #- run:
+      #    name: Configure server
+      #    command: |
+      #      ansible-playbook -i ./mybooks/inventory ./mybooks/main-nodesetup.yml
+
 
 # Orchestrate jobs using workflows
 # See: https://circleci.com/docs/configuration-reference/#workflows
@@ -42,6 +62,7 @@ workflows:
   my-workflow:
     jobs:
       - check_aws_version
-      - create_infrastructure:
-          requires:
-            - check_aws_version
+      - configure_infrastructure
+#      - create_infrastructure:
+#          requires:
+#            - check_aws_version
