--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -115,8 +115,9 @@ jobs:
           # Similarly, you can create and use $OldStackID environment variable in place of production-distro 
           command: |
             export OldBucketID=$(cat ~/textfile.txt)
+            export OldShaId=$(cat ~/textfile.txt | grep -o '.......$')
             aws s3 rm "s3://${OldBucketID}" --recursive
-            aws cloudformation delete-stack --stack-name stack-create-bucket-${CIRCLE_WORKFLOW_ID:0:7}
+            aws cloudformation delete-stack --stack-name stack-create-bucket-${OldShaId}
           #  aws cloudformation delete-stack --stack-name production-distro 
           #  aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 
